--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -5,13 +5,13 @@
     - name: Import VPC Variables
       include_vars: vars/vpc_setup
 
-    - name: Create project VPC
+    - name: Create Vprofile VPC
       ec2_vpc_net:
         name: "{{vpc_name}}"
         cidr_block: "{{vpcCidr}}"
         region: "{{region}}"
         dns_support: yes
-        dns_hostname: yes
+        dns_hostnames: yes
         tenancy: default
         state: "{{state}}"
       register: vpcout
