--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -15,3 +15,78 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout
+
+      -debug:
+        var: vpcout
+
+    - name: create Public Subnet 1 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PubSub1Cidr}}"
+        map_public: yes
+        tags:
+            Name: project-pubsub1
+      register: pubsub1_out
+
+    - name: create Public Subnet 2 in Zone2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PubSub2Cidr}}"
+        map_public: yes
+        tags:
+          Name: project-pubsub2
+      register: pubsub2_out
+
+    - name: create Public Subnet 3 in Zone3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PubSub3Cidr}}"
+        map_public: yes
+        tags:
+          Name: project-pubsub3
+      register: pubsub3_out
+
+    - name: create Private Subnet 1 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub1Cidr}}"
+        map_public: yes
+        tags:
+            Name: project-privsub1
+      register: privsub1_out
+
+    - name: create Private Subnet 2 in Zone2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub2Cidr}}"
+        map_public: yes
+        tags:
+          Name: project-privsub2
+      register: privsub2_out
+
+    - name: create Private Subnet 3 in Zone3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub3Cidr}}"
+        map_public: yes
+        tags:
+          Name: project-privsub3
+      register: privsub3_out
