--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -100,3 +100,17 @@
           Name: project-igw
       register: igw_out
 
+    - name: Setup Public Subnet Route Table
+      ec2_vpc_route_table:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        tags:
+          Name: project-PubRT
+        subnets:
+            - "{{ pubsub1_out.subnet.id }}"
+            - "{{ pubsub2_out.subnet.id }}"
+            - "{{ pubsub3_out.subnet.id }}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{ igw_out.gateway_id }}"
+      register: pubRT_out
