--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -16,8 +16,8 @@
         state: "{{state}}"
       register: vpcout
 
-    #- debug:
-    #    var: vpcout
+    - debug:
+        var: vpcout
 
     - name: create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
