--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -1,4 +1,4 @@
-- name: Setup Project Bastion Host
+- name: Setup Bastion Host
   hosts: localhost
   connection: local
   gather_facts: no
@@ -9,7 +9,7 @@
     - name: Import VPC setup Variable
       include_vars: vars/output_vars
 
-    - name: Create Project ec2 key
+    - name: Create project ec2 key
       ec2_key:
         name: "{{ keyName }}"
         region: "{{ region }}"
@@ -45,12 +45,12 @@
         wait_timeout: 300
         instance_tags:
           Name: "Bastion_host"
-          Project: Project
+          Project: project
           Owner: Cloud Team
         exact_count: 1
         count_tag:
           Name: "Bastion_host"
-          Project: Project
+          Project: project
           Owner: Cloud Team
         group_id: "{{ BastionSG_out.group_id }}"
         vpc_subnet_id: "{{ pubsub3id }}"
@@ -67,13 +67,13 @@
         wait_timeout: 300
         instance_tags:
           Name: "privsub1Instance"
-          Project: Project
+          Project: project
           Owner: Cloud Team
         exact_count: 1
         count_tag:
           Name: "privsub1Instance"
-          Project: Project
-          Owner: Cloud Team
+          Project: project
+          Owner: Colud Team
         vpc_subnet_id: "{{ privsub1id }}"
         assign_public_ip: yes
       register: privsub1Instance_out
@@ -88,12 +88,12 @@
          wait_timeout: 300
          instance_tags:
            Name: "privsub3Instance"
-           Project: Project
+           Project: project
            Owner: Cloud Team
          exact_count: 1
          count_tag:
            Name: "privsub3Instance"
-           Project: Project
+           Project: project
            Owner: Cloud Team
          vpc_subnet_id: "{{ privsub3id }}"
          assign_public_ip: yes
